--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@faker-js/faker": "^9.2.0",
     "@types/styled-components": "^5.1.34",
     "avataaars": "^2.0.0",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
